tests/paczka1/fuzzy1/33236833.err
Error in line 2: yAW A681 9,5
Error in line 5: yAW S682 80,2
Error in line 14: aj8wWxwF00 S360 33,5
Error in line 38: A681 S682 91,4
